[metadata]
name = rofi-clipster
version = attr: clippy.clippy.__version__
author = fdw
author_email = 5821180+fdw@users.noreply.github.com
description = A rofi interface for clipster
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fdw/rofi-clipster
project_urls =
  Source = https://github.com/fdw/rofi-clipster
  Bug Tracker = https://github.com/fdw/rofi-clipster/issues
  Changelog = https://github.com/fdw/rofi-clipster/CHANGELOG.md
license: MIT
classifiers =
  License :: OSI Approved :: MIT License

[options]
package_dir =
  = src
packages = clippy
python_requires = >=3.7
install_requires =
  ConfigArgParse>0.15,<2.0.0

[options.entry_points]
console_scripts =
  rofi-clipster = clippy.clippy:main
